// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotePreview /> renders correctly 1`] = `
<div
  className="note-preview"
  onMouseDown={[Function]}
>
  <mock-link
    onClick={[Function]}
    to={
      Object {
        "pathname": "/notes/k17qr25c",
        "state": Object {
          "id": "k17qr25c",
        },
      }
    }
  >
    <h2
      className="ui-text ui-text--display note-preview-title-display"
    >
      Hello
    </h2>
    <div
      className="note-preview-body"
    >
      <span
        className="ui-text ui-text--body note-preview-date-display"
      >
        Yesterday
      </span>
      <span
        className="ui-text ui-text--body note-preview-text-display"
      >
        This is a note
      </span>
    </div>
  </mock-link>
  <button
    className="ui-btn ui-btn--delete"
    onClick={[Function]}
    type="button"
  >
    Delete
  </button>
</div>
`;

exports[`<NotePreview /> renders correctly with swipe offset 1`] = `
<div
  className="note-preview note-preview--swiped"
>
  <mock-link
    onClick={[Function]}
    to={
      Object {
        "pathname": "/notes/k17qr25c",
        "state": Object {
          "id": "k17qr25c",
        },
      }
    }
  >
    <h2
      className="ui-text ui-text--display note-preview-title-display"
    >
      Hello
    </h2>
    <div
      className="note-preview-body"
    >
      <span
        className="ui-text ui-text--body note-preview-date-display"
      >
        Yesterday
      </span>
      <span
        className="ui-text ui-text--body note-preview-text-display"
      >
        This is a note
      </span>
    </div>
  </mock-link>
  <button
    className="ui-btn ui-btn--delete"
    onClick={[Function]}
    type="button"
  >
    Delete
  </button>
</div>
`;

exports[`<NotePreview /> renders correctly with swipe offset greater than 80 1`] = `
<div
  className="note-preview note-preview--swiped note-preview--swiping"
>
  <mock-link
    onClick={[Function]}
    to={
      Object {
        "pathname": "/notes/k17qr25c",
        "state": Object {
          "id": "k17qr25c",
        },
      }
    }
  >
    <h2
      className="ui-text ui-text--display note-preview-title-display"
    >
      Hello
    </h2>
    <div
      className="note-preview-body"
    >
      <span
        className="ui-text ui-text--body note-preview-date-display"
      >
        Yesterday
      </span>
      <span
        className="ui-text ui-text--body note-preview-text-display"
      >
        This is a note
      </span>
    </div>
  </mock-link>
  <button
    className="ui-btn ui-btn--delete"
    onClick={[Function]}
    type="button"
  >
    Delete
  </button>
</div>
`;

exports[`<NotePreview /> renders correctly without title or text 1`] = `
<div
  className="note-preview"
  onMouseDown={[Function]}
>
  <mock-link
    onClick={[Function]}
    to={
      Object {
        "pathname": "/notes/k17qr25c",
        "state": Object {
          "id": "k17qr25c",
        },
      }
    }
  >
    <h2
      className="ui-text ui-text--display note-preview-title-display"
    >
      New Note
    </h2>
    <div
      className="note-preview-body"
    >
      <span
        className="ui-text ui-text--body note-preview-date-display"
      >
        Yesterday
      </span>
      <span
        className="ui-text ui-text--body note-preview-text-display"
      >
        No additional text
      </span>
    </div>
  </mock-link>
  <button
    className="ui-btn ui-btn--delete"
    onClick={[Function]}
    type="button"
  >
    Delete
  </button>
</div>
`;
